--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,4 @@ where = ["."]
 include = ["tribal_village_env*"]
 
 [tool.setuptools.package-data]
-tribal_village_env = ["*.so", "libtribal_village.so"]
+tribal_village_env = ["*.so", "*.dylib", "*.dll", "libtribal_village.*"]
