--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include LICENSE
 include README.md
 include build_lib.sh
 recursive-include tribal_village_env *.py
+recursive-include tribal_village_env libtribal_village.*
 recursive-include src *.nim
 include tribal_village.nimble
 include config.nims
