--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ bindings/generated/
 mettascope2/dist/
 mettascope2/data/fidget/
 data/fidget/
+!data/resources/
+!data/resources/*.png
+uv.lock
 
 # Dynamic libraries (platform-specific compiled binaries)
 *.dylib
