--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ tribal_replay_*.tribal
 # Example outputs that shouldn't be committed
 examples/tribal_replay_*.tribal
 examples/*.tmp
+train_dir/
 
 # Python package build artifacts
 *.egg-info/
