--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,10 +4,9 @@ include *.dll
 include libtribal_village.so
 include LICENSE
 include README.md
-include build_lib.sh
 recursive-include tribal_village_env *.py
 recursive-include tribal_village_env libtribal_village.*
 recursive-include src *.nim
 recursive-include data *
 include tribal_village.nimble
-include config.nims
+include nimby.lock
