--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
   "pufferlib-core>=3.0.0",
   "typer>=0.19.2",
   "rich>=13.7.0",
-  "cogames @ git+https://github.com/Metta-AI/metta.git#subdirectory=packages/cogames",
 ]
 
 [project.scripts]
@@ -29,6 +28,10 @@ include-package-data = true
 Homepage = "https://github.com/Metta-AI/tribal-village"
 Repository = "https://github.com/Metta-AI/tribal-village.git"
 
+[project.optional-dependencies]
+cogames = [
+  "cogames @ git+https://github.com/Metta-AI/metta.git#subdirectory=packages/cogames",
+]
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["tribal_village_env*"]
