--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 metta
 tribal_village
+PufferLib
 src/tmp/
 src/mettascope.out
 bindings/generated/
@@ -103,6 +104,7 @@ htmlcov/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+.ruff_cache/
 nimble.develop
 nimble.paths
 nim.cfg
