--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ bindings/generated/
 mettascope2/dist/
 mettascope2/data/fidget/
 data/fidget/
-!data/resources/
-!data/resources/*.png
+!data/inventory/
+!data/inventory/*.png
 uv.lock
 
 # Dynamic libraries (platform-specific compiled binaries)
