--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "numpy>=1.20.0",
   "gymnasium>=0.29.0",
   "pufferlib-core>=3.0.0",
+  "opencv-python-headless>=4.8.0",
   "typer>=0.19.2",
   "rich>=13.7.0",
 ]
