wip: Save uncommitted polecat work before cleanup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "opencv-python-headless>=4.8.0",
   "typer>=0.19.2",
   "rich>=13.7.0",
+  "pydantic>=2.0.0",
 ]
 
 [project.scripts]
