--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,5 +8,6 @@ recursive-include tribal_village_env *.py
 recursive-include tribal_village_env libtribal_village.*
 recursive-include src *.nim
 recursive-include data *
+include tribal_village.nim
 include tribal_village.nimble
 include nimby.lock
